--- a/WhiteMvvmUnitTest/WhiteMvvmUnitTest.csproj
+++ b/WhiteMvvmUnitTest/WhiteMvvmUnitTest.csproj
@@ -16,4 +16,16 @@
       <ProjectReference Include="..\WhiteMvvm\WhiteMvvm.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <EmbeddedResource Remove="obj\**" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Compile Remove="obj\**" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <None Remove="obj\**" />
+    </ItemGroup>
+
 </Project>
