refine and renaming behaviors

--- a/WhiteMvvmUnitTest/WhiteMvvmUnitTest.csproj
+++ b/WhiteMvvmUnitTest/WhiteMvvmUnitTest.csproj
@@ -31,4 +31,8 @@
       <None Remove="obj\**" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="ConvertersTests" />
+    </ItemGroup>
+
 </Project>
