--- a/WhiteMvvm/WhiteMvvm.csproj
+++ b/WhiteMvvm/WhiteMvvm.csproj
@@ -28,7 +28,7 @@
     <PackageReference Include="System.Threading.Tasks.Extensions" Version="4.5.4" />
     <PackageReference Include="Unity" Version="5.11.9" />
     <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
-    <PackageReference Include="Xamarin.Forms" Version="4.8.0.1821" />
+    <PackageReference Include="Xamarin.Forms" Version="5.0.0.1829-pre6" />
   </ItemGroup>
 
   <ItemGroup>
